--- a/mo/package.json
+++ b/mo/package.json
@@ -26,7 +26,9 @@
     "@nestjs/platform-express": "^8.0.0",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "@nestjs/jwt":"^8.0.0",
+    "@nestjs/passport":"^8.2.1"
   },
   "devDependencies": {
     "@nestjs/cli": "^8.0.0",
